--- a/hmk/hmk_02/hmk_02.qmd
+++ b/hmk/hmk_02/hmk_02.qmd
@@ -53,3 +53,5 @@ We can use rm() to remove variables from the workspace.
 rm(list=ls())
 ls()
 ```
+
+The syntax of removing all the variables from the workspace is important to note. We use `list=ls()` to create a list of the all the workspace variables and use it as a parameter in the `rm()` function.
