--- a/hmk/hmk_06/hmk_06.qmd
+++ b/hmk/hmk_06/hmk_06.qmd
@@ -58,9 +58,9 @@ In no particular order of severity of crime:
 
 -   A stylistic choice that is common with depth profiles is to invert the y-axis so that lower in the graph corresponds to lower in the core. I have ignored that practice here.
 
--   The data points encode a depth measurement into their color. This depth measurement is an pre-scaled value related to core compression. Since there are two cores present and the y-axis is a scaled depth measurement, they color does not even correspond to axis. It is an aesthetic that only confuses the observer.
+-   The data points encode a depth measurement into their color. This depth measurement is an pre-scaled value related to core compression. Since there are two cores present and the y-axis is a scaled depth measurement, they color does not even correspond to the axis. It is an aesthetic that only confuses the observer.
 
--   The color aesthetic is also presented as a divergent color gradient. Divergent color gradients are only best when you are interested in two whether your data is going in two different directions (e.g. positive and negative numbers, Wilke Chapter 4). This scale is only going in one direction (increasing depths) and there is no apparent numbers we'd like to compare to (besides 0). Additionally, the chosen ends of the color scale are very common colors to be indistinguishable for color-blind people. So some observers may not even know a color scale is present on points.
+-   The color aesthetic is also presented as a divergent color gradient. Divergent color gradients are only best when you are interested in to whether your data is going in two different directions (e.g. positive and negative numbers, Wilke Chapter 4). This scale is only going in one direction (increasing depths) and there is no apparent numbers we'd like to compare to (besides 0). Additionally, the chosen ends of the color scale are very common colors to be indistinguishable for color-blind people. So some observers may not even know a color scale is present on the points.
 
 -   The size aesthetic was also used to present information related to the mass of the sample used for analysis. This is less valuable to see in this form of a graph and even then the observer is less capable of distinguishing differences based on area (Healy Ch 1). Additionally, the observer is unable to know this is what is being encoded since the legend for it does not include any labeling.
 
